--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <main class="content">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-                <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-                <div class="lead__train">
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <figure class="lead__train">
                     <img class="lead__image" src="./images/lead-polka.jpg" alt="поездка в поезде">
-                    <p class="lead__caption">ваша полка — верхняя</p>
-                </div>
+                    <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+                </figure>
             </section>
             <section class="intro">
                 <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
@@ -36,11 +36,11 @@
                     охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы
                     выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li class="intro__list-item"><span class="intro__list-item intro__list-item_bold">Часовых поясов</span> 11</li>
-                    <li class="intro__list-item"><span class="intro__list-item intro__list-item_bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
-                    <li class="intro__list-item"><span class="intro__list-item intro__list-item_bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-                    <li class="intro__list-item"><span class="intro__list-item intro__list-item_bold">Природных заповедников</span> 105</li>
-                    <li class="intro__list-item"><span class="intro__list-item intro__list-item_bold">Аэропортов</span> 241</li>
+                    <li class="intro__list-item"><span class="intro__bold">Часовых поясов</span> 11</li>
+                    <li class="intro__list-item"><span class="intro__bold">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li class="intro__list-item"><span class="intro__bold">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li class="intro__list-item"><span class="intro__bold">Природных заповедников</span> 105</li>
+                    <li class="intro__list-item"><span class="intro__bold">Аэропортов</span> 241</li>
                 </ul>
             </section>
             <section class="photo-grid" aria-label="Фотогалерея">
@@ -58,7 +58,7 @@
                 <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
             </section>
             <section class="places">
-                <div class="place">
+                <article class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
@@ -75,8 +75,8 @@
                             здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного
                             моря.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
@@ -95,8 +95,8 @@
                             начинает сбываться с билетом
                             в Мурманск.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
@@ -114,8 +114,8 @@
                             летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
                             края.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
@@ -132,8 +132,8 @@
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
                             года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                     </div>
-                </div>
-                <div class="place">
+                </article>
+                <article class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
@@ -149,7 +149,7 @@
                             В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                             в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     </div>
-                </div>
+                </article>
             </section>
             <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
@@ -162,13 +162,13 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="footer__links">
+            <nav class="footer__links">
                 <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
                 <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
                 <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
                 <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
                 <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
-            </div>
+            </nav>
             <p class="footer__copyright">© 2023. Васильева Александра</p>
         </footer>
     </div>
